# ChangeLog for media-libs/varconf
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/varconf/ChangeLog,v 1.30 2012/01/28 21:09:02 tupone Exp $

*varconf-0.6.7 (28 Jan 2012)

  28 Jan 2012; Tupone Alfredo <tupone@gentoo.org> +varconf-0.6.7.ebuild:
  Version bump to 0.6.7 Bug #399239 by Mr. Anderson

*varconf-0.6.6 (05 Jun 2009)

  05 Jun 2009; Alfredo Tupone <tupone@gentoo.org> +varconf-0.6.6.ebuild:
  Version bump to 0.6.6

  23 Jan 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  stable ppc, bug 254834

  18 Jan 2009; Markus Meier <maekke@gentoo.org> varconf-0.6.5.ebuild:
  amd64/x86 stable, bug #254834

  13 Jan 2009; Brent Baude <ranger@gentoo.org> varconf-0.6.5.ebuild:
  stable ppc, bug 254834

  06 Nov 2008; Tupone Alfredo <tupone@gentoo.org> -varconf-0.6.4.ebuild:
  Removing old 0.6.4 version

  06 Nov 2008; Tupone Alfredo <tupone@gentoo.org>
  +files/varconf-0.6.5-gcc43.patch, varconf-0.6.5.ebuild:
  Missing include. Bug #245667 by Sandro Bonazzola

  30 Aug 2008; <tupone@gentoo.org> -varconf-0.6.2.ebuild:
  0.6.2 version removed as not used

  07 Jul 2008; Tupone Alfredo <tupone@gentoo.org> varconf-0.6.4.ebuild:
  Make 0.6.4 depends only on slot 1.2 of dev-libs/libsigc++.
  Requested via bug #228479 by Rémi Cardona <remi@gentoo.org>

  07 May 2007; Tupone Alfredo <tupone@gentoo.org> varconf-0.6.5.ebuild:
  Added ~amd64 keyword

*varconf-0.6.5 (14 Jan 2007)

  14 Jan 2007; <tupone@gentoo.org> +varconf-0.6.5.ebuild:
  Version bump to 0.6.5

*varconf-0.6.4 (10 Jan 2007)

  10 Jan 2007; <tupone@gentoo.org> metadata.xml, +varconf-0.6.4.ebuild:
  Version bump to 0.6.4

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -varconf-0.5.0.ebuild,
  -varconf-0.5.4.ebuild:
  QA: Removed unused versions.

  12 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> varconf-0.5.0.ebuild,
  varconf-0.5.4.ebuild, varconf-0.6.2.ebuild:
  Unkeywording sparc, see #153411
