@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/varconf/varconf-0.6.6.ebuild,v 1.1 2009/06/05 12:59:18 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/varconf/varconf-0.6.6.ebuild,v 1.2 2012/02/03 17:47:08 ago Exp $
 
 DESCRIPTION="A configuration system designed for the STAGE server."
 SRC_URI="mirror://sourceforge/worldforge/${P}.tar.bz2"
@@ -8,7 +8,7 @@ HOMEPAGE="http://www.worldforge.org/dev/eng/libraries/varconf"
 
 SLOT="0"
 LICENSE="LGPL-2.1"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="amd64 ~ppc ~x86"
 IUSE=""
 
 RDEPEND=">=dev-libs/libsigc++-2.0"
